-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.15.0
-
None
-
Qt 5.15
-
-
964aefd4ec6fbb2c4b9b6afde692cf7b7907ec53 (qt-creator/qt-creator/master)
CppTools::ProjectFile handles Cuda sources, but CppTools::ProjectFileCategorizer does not. This leadsProjectInfoGenerator to yield an empty ProjectPart for Cuda sources, which in turn leads clangcodemodel to send arguments to clang which don't match the toolchain.
A one-liner fix which is working for me:
--- A/src/plugins/cpptools/cppprojectfilecategorizer.cpp 2021-05-03 23:12:55.000000000 -0300 +++ B/src/plugins/cpptools/cppprojectfilecategorizer.cpp 2021-05-16 14:29:00.995171287 -0300 @@ -72,6 +72,7 @@ ProjectFiles ProjectFileCategorizer::cla break; case ProjectFile::CXXSource: case ProjectFile::CXXHeader: + case ProjectFile::CudaSource: m_cxxSources += projectFile; break; case ProjectFile::ObjCXXSource:
| For Gerrit Dashboard: QTCREATORBUG-25742 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 349528,2 | CppTools: Consider CUDA and OpenCL sources | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |