CppTools: Consider CUDA and OpenCL sources

Fixes: QTCREATORBUG-25742
Change-Id: If2ecd5344c3af6398bb70a9f0bfcbe3d3593026d
Reviewed-by: Christian Stenger <christian.stenger@qt.io>